welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:20: error: expected start of definition
	override def run() {
                 ^MethodsDogHouse:51: error: Unmatched closing brace '}' ignored here
}
^